[package]
name = "cookie_check"
version = "0.1.1"
authors = ["Liam P. White <byteslice@airmail.cc>"]

[dependencies]
base64 = "0.10"
openssl = "0.10"
percent-encoding = "1.0"
serde_json = "1.0"
hex = "0.3"
chrono = "0.4"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
# opt-level = "z"
panic = "abort"
